--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -143,6 +143,7 @@
         <awaitility.version>3.1.6</awaitility.version>
         <jprocesses.version>1.6.5</jprocesses.version>
         <jboss-logmanager.version>1.0.2</jboss-logmanager.version>
+        <jboss-logmanager-ext.version>1.0.0.Alpha5</jboss-logmanager-ext.version>
         <jetty.version>9.4.15.v20190215</jetty.version>
         <yasson.version>1.0.3</yasson.version>
     </properties>
@@ -453,6 +454,12 @@
                 <version>${project.version}</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-logstash</artifactId>
+                <version>${project.version}</version>
+                <scope>provided</scope>
+            </dependency>
 
             <!-- Quarkus test dependencies -->
 
@@ -558,6 +565,25 @@
                     <exclusion>
                         <groupId>org.glassfish</groupId>
                         <artifactId>javax.json</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.logmanager</groupId>
+                <artifactId>jboss-logmanager-ext</artifactId>
+                <version>${jboss-logmanager-ext.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.jboss.logmanager</groupId>
+                        <artifactId>jboss-logmanager-embedded</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.glassfish</groupId>
+                        <artifactId>javax.json</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>javax.json</groupId>
+                        <artifactId>javax.json-api</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
